--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,7 @@ span::before{
   /* background-image: url("bookbackground.jpg"); */
   /* background-repeat: no-repeat; */
   background-size: cover;
+  background-color: #8c897b;
   overflow: hidden;
   /* overflow: hidden; */
 }
@@ -236,6 +237,7 @@ span::before{
   /* right: 0; */
   /* min-height: 100%; */
   height: 100%;
+  width: 100%;
   /* background-size: cover; */
 }
 
