--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ span::before{
   /* bottom: 0; */
   /* right: 0; */
   /* min-height: 100%; */
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   /* background-size: cover; */
 }
