--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 body{
   /* position: relative; */
-  background-image: url('school.jpg');
+  background-image: url('pexels-quang-nguyen-vinh-6871980.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
